[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/Body/Body.gd" type="Script" id=1]
[ext_resource path="res://sprite sheets/player_placeholder_souless.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9, 9 )

[node name="Body" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="MovementCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpawnDelay" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="RestoreCollision" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[connection signal="timeout" from="SpawnDelay" to="." method="_on_SpawnDelay_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
